fix: Fix issue with escaped URLs not being properly replaced with ref data and url params